# mofaflex_celltypes

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  release.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  index.md  modeldescription.md  references.bib  tutorials.md
docs/_templates/autosummary/: class.rst
docs/extensions/: dynamicapi.py
docs/notebooks/: getting_started.ipynb  kang_analysis.ipynb  mofaflex_for_mofa_users_cll.ipynb
src/mofaflex/: __init__.py
src/mofaflex/_core/: __init__.py  feature_sets.py  io.py  model.py  mofaflex.py  pcgse.py  utils.py
src/mofaflex/_core/api/: __init__.py  _generate.py  likelihoods.py  priors.py  terms.py  types.py  utils.py
src/mofaflex/_core/datasets/: __init__.py  anndatadataset.py  anndatadictdataset.py  base.py  misc.py  mudatadataset.py  utils.py
src/mofaflex/_core/likelihoods/: __init__.py  base.py  bernoulli.py  negativebinomial.py  normal.py
src/mofaflex/_core/likelihoods/pyro/: __init__.py  base.py  bernoulli.py  categorical.py  negativebinomial.py  normal.py
src/mofaflex/_core/priors/: __init__.py  base.py  constant.py  gsfa.py  horseshoe.py  simple_location_scale.py  spike_slab.py
src/mofaflex/_core/priors/gaussian_process/: __init__.py  gaussian_process.py  gp.py
src/mofaflex/_core/pyro/: model.py
src/mofaflex/_core/pyro/likelihoods/: base.py
src/mofaflex/_core/pyro/priors/: __init__.py  base.py  gaussian_process.py  horseshoe.py  simple_location_scale.py  spike_slab.py
src/mofaflex/_core/terms/: __init__.py  api.py  base.py  mofaflex.py
src/mofaflex/pl/: __init__.py  _plotting.py
src/mofaflex/tl/: __init__.py  _downstream.py  _synthetic.py
tests/: conftest.py  test_anndatadataset.py  test_anndatadictdataset.py  test_dynamicapi.py  test_likelihoods.py  test_mofaflex_integration.py  test_mudatadataset.py  test_pcgse.py  test_plots.py  test_preprocessing_constant_features.py  test_prior.py  test_save_load_model.py
tests/data/: cll_model.h5  mousebrain_model.h5
tests/plots/: conftest.py  test_plots.py
