[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "mofaflex"
description = "Factor Analysis Models"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Ilia Kats", email = "i.kats@dkfz.de" },
]
authors = [
  { name = "Arber Qoku", email = "arber.qoku@dkfz.de" },
  { name = "Florin Walter", email = "florin.walter@dkfz.de" },
  { name = "Ilia Kats", email = "i.kats@dkfz.de" },
  { name = "Martin Rohbeck", email = "martin.rohbeck@dkfz.de" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "anndata>=0.11",
  "array-api-compat",
  "dtw-python",
  "gpytorch",
  "h5py",
  "mizani",
  "mudata>=0.3.2",
  "numpy",
  "packaging",
  "pandas",
  "platformdirs",
  "plotnine",
  "pyro-ppl",
  "scikit-learn",
  "scipy>=1.8",
  "session-info2",    # for debug logging (referenced from the issue template)
  "statsmodels",
  "torch",
  "tqdm",
]
optional-dependencies.lazy = [
  "dask[array,dataframe]!=2025.5", # https://github.com/dask/dask/issues/11958
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://mofaflex.readthedocs.io/"
urls.Home-page = "https://github.com/bioFAM/mofaflex"
urls.Source = "https://github.com/bioFAM/mofaflex"

[dependency-groups]
dev = [
  "pre-commit",
  "twine>=4.0.2",
]
test = [
  "coverage>=7.10",
  "mofaflex[lazy]",
  "pytest",
]
doc = [
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxext-opengraph",
]

[tool.hatch]
build.hooks.vcs.version-file = "src/mofaflex/_version.py"
envs.default.installer = "uv"
envs.default.dependency-groups = [ "dev" ]
envs.docs.dependency-groups = [ "doc" ]
envs.docs.scripts.build = "sphinx-build -M html docs docs/_build {args}"
envs.docs.scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
envs.docs.scripts.clean = "git clean -fdX -- {args:docs}"
envs.hatch-test.dependency-groups = [ "dev", "test" ]
envs.hatch-test.matrix = [
  # Test the lowest and highest supported Python versions with normal deps
  { deps = [ "stable" ], python = [ "3.11", "3.14" ] },
  # Test the newest supported Python version also with pre-release deps
  { deps = [ "pre" ], python = [ "3.14" ] },
]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
envs.hatch-test.overrides.matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]
metadata.allow-direct-references = true
version.source = "vcs"

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
format.skip-magic-trailing-comma = true
format.exclude = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008",   # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D105",   # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107",   # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203",   # We don’t want a blank line before a class docstring
  "D213",   # We want docstrings to start immediately after the opening triple quote
  "D400",   # first line should end with a period [Bug: doesn't work with single-line docstrings]
  "D401",   # First line should be in imperative mood; try rephrasing
  "E501",   # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731",   # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741",   # allow I, O, l as variable names -> I is the identity matrix
  "TID252", # allow relative imports
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."docs/extensions/*" = [ "D" ]
lint.per-file-ignores."docs/notebooks/*" = [ "D", "F403", "F405" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "google"

[tool.pytest]
strict = true
testpaths = [ "tests" ]
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage]
run.omit = [
  "**/test_*.py",
]
run.patch = [ "subprocess" ]
run.source = [ "mofaflex" ]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
